# SimpleLib

./: README.md  setup.cfg  setup.py
SimpleLib/: myfunctions.py
SimpleLib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: main.py
src/SimpleLib.egg-info/: PKG-INFO  SOURCES.txt
src/SimpleLib_ninjagoku4560.egg-info/: PKG-INFO  SOURCES.txt
test_SimpleLib/: test_myfunctions.py
