[metadata]
name = SimpleLib-ninjagoku4560
version = 0.1.0
author = ninjagoku45605
author_email = ninjagoku45605@gmail.com
description = A python library to transform a lot of complet function into a simple function
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ninjagoku4560/SimpleLib
project_urls =
    Bug Tracker = https://github.com/ninjagoku4560/SimpleLib/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[pypi]
  username = __token__
  password = pypi-AgEIcHlwaS5vcmcCJDg3YWEzNjRiLTkwM2MtNGZiNy1hMjU4LTg1NjA5YjhmNDBkZQACKlszLCJiZWY5NjZjZS02N2RjLTRiMWUtYjE5Yy02M2UyNmI1YjVmNzAiXQAABiDM0_Pusl_fey0XAJuxOTzNictamwIHlziZUL8ZMfSEsA

[testpypi]
  username = __token__
  password = pypi-AgENdGVzdC5weXBpLm9yZwIkOWYxOTAxYmEtMGE5Yi00ODY2LTg2YTQtZDA1NDQwZWI2YzkyAAIqWzMsImJmNzZhYzEyLTQ5MmUtNDAzNS1iNjRiLWUzMTA4NTMyNDgzMSJdAAAGIDarVScFYyyc2nJ5_ljLm89sfWLKHlj445_JSSwTrp5L